--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -1,6 +1,8 @@
 {
   "about": "من نحن",
+  "addColon": "Add colon",
   "aiChat": "تحدث مع AI",
+  "algorithm": "Algorithm",
   "analyze": "تحليل",
   "analyzing": "تحليل...",
   "apiKey": "مفتاح API",
@@ -47,7 +49,10 @@
   "confirmPassword": "تأكيد كلمة المرور",
   "continueAsGuest": "الاستمرار كضيف",
   "copiedToClipboard": "نسخ إلى الحافظة",
+  "copy": "Copy",
+  "copyBase64": "Copy Base64",
   "createAccount": "إنشاء حساب",
+  "createDate": "Created",
   "dataDirectory": "بيانات التطبيق",
   "dataDirectory2": "بيانات التطبيق ٢",
   "details": "التفاصيل",
@@ -66,6 +71,7 @@
   "enterUsername": "الرجاء إدخال اسم المستخدم",
   "errorDuringAnalysis": "حدث خطأ أثناء التحليل",
   "excludeSystemApps": "استبعاد تطبيقات النظام",
+  "expireDate": "Expired",
   "extractApk": "مستخرج التطبيقات",
   "extractingApk": "استخراج APK",
   "failedToExtractFiles": "فشل في استخراج الملفات من ZIP: {e}",
@@ -92,6 +98,7 @@
   "firstInstall": "أول تثبيت",
   "flutterAnalysis": "تحليل تطبيقات الفلاتر",
   "flutterAnalysisDesc": "عرض معلومات ملفات الفلاتر",
+  "format": "Format",
   "generate": "توليد",
   "generating": "توليد ...",
   "guestNotAllowed": "لا يمكن للمستخدمين الضيوف استخدام هذه الميزة",
@@ -148,6 +155,7 @@
   },
   "openOllamaLibrary": "فتح مكتبة أولاما",
   "overwrite": "الكتابة",
+  "owner": "Owner",
   "packageName": "مسمى الحزمة",
   "passLen": "يجب أن تتكون كلمة المرور من 8 أحرف على الأقل",
   "passMisMatch": "كلمتا المرور غير متطابقتين",
@@ -159,6 +167,7 @@
   "pressBackAgainToExit": "اضغط مرة أخرى للخروج",
   "proceed": "المتابعة",
   "profile": "حساب تعريفي",
+  "rawData": "Raw data",
   "register": "تسجيل",
   "repair": "إصلاح",
   "repairDexError": "خطأ في إصلاح ملف DEX: {e}",
@@ -180,6 +189,7 @@
   "repairing": "إصلاح...",
   "reset": "إعادة ضبط",
   "save": "حفظ",
+  "scheme": "Scheme",
   "searchApps": "البحث في التطبيقات...",
   "selectAModel": "أختر محركا كى تبدأ المحادثة",
   "selectFiles": "حدد ملف {type}",
@@ -202,7 +212,10 @@
   },
   "setJarPath": "تعيين مسار محرر apkitor",
   "setSystemMessage": "تعيين رسالة النظام",
+  "signature": "Signature",
+  "signInfo": "Signature Information",
   "smaliGrammar": "شرح كود السمالى",
+  "status": "Status",
   "suggestLogin": "لديك حساب؟ تسجيل الدخول",
   "suggestRegister": "هل تحتاج إلى حساب؟ سجل",
   "systemMessage": "رسالة النظام",
@@ -223,11 +236,13 @@
   "updateAvailable": "التحديث المتاح",
   "updateAvailableMessage": "يتوفر إصدار جديد من التطبيق.هل ترغب في التحديث الآن؟",
   "uploading": "جارى الرفع ...",
+  "upperCase": "Upper case",
   "username": "اسم المستخدم",
   "usernameCond": "يمكن أن يحتوي اسم المستخدم فقط على أحرف وأرقام وتسطير سطر",
   "usernameLimit": "اسم المستخدم يجب أن يكون بين 5 و 15 حرفا",
   "validateModules": "التحقق من إصدار base.apk مع تقسيم APK",
   "versionCode": "ترميز الإصدار",
+  "viewData": "View Data",
   "vrd": "التحقق من اسم لوحة الموارد",
   "welcomeBack": "مرحبا بعودتك!"
 }
