--- a/lib/l10n/app_el.arb
+++ b/lib/l10n/app_el.arb
@@ -1,6 +1,8 @@
 {
   "about": "Σχετικά",
+  "addColon": "Add colon",
   "aiChat": "AI Συνομιλία",
+  "algorithm": "Algorithm",
   "analyze": "Ανάλυση",
   "analyzing": "Ανάλυση...",
   "apiKey": "Κλειδί API",
@@ -47,7 +49,10 @@
   "confirmPassword": "Επιβεβαίωση Κωδικού Πρόσβασης",
   "continueAsGuest": "Συνέχεια ως επισκέπτης",
   "copiedToClipboard": "Αντιγράφηκε στο πρόχειρο",
+  "copy": "Copy",
+  "copyBase64": "Copy Base64",
   "createAccount": "Δημιουργία Λογαριασμού",
+  "createDate": "Created",
   "dataDirectory": "Κατάλογος δεδομένων",
   "dataDirectory2": "Κατάλογος δεδομένων 2",
   "details": "Λεπτομέρειες",
@@ -66,6 +71,7 @@
   "enterUsername": "Παρακαλώ εισάγετε όνομα χρήστη",
   "errorDuringAnalysis": "Παρουσιάστηκε σφάλμα κατά την ανάλυση",
   "excludeSystemApps": "Εξαίρεση Εφαρμογών Συστήματος",
+  "expireDate": "Expired",
   "extractApk": "Εξαγωγή APK",
   "extractingApk": "Εξαγωγή APK",
   "failedToExtractFiles": "Αποτυχία εξαγωγής αρχείων από το ZIP: {e}",
@@ -92,6 +98,7 @@
   "firstInstall": "Πρώτη εγκατάσταση",
   "flutterAnalysis": "Ανάλυση Flutter",
   "flutterAnalysisDesc": "Αναλύστε τα χείλη Flutter",
+  "format": "Format",
   "generate": "Δημιουργία",
   "generating": "Δημιουργία...",
   "guestNotAllowed": "Οι χρήστες δεν μπορούν να χρησιμοποιήσουν αυτή τη δυνατότητα",
@@ -148,6 +155,7 @@
   },
   "openOllamaLibrary": "Άνοιγμα Της Βιβλιοθήκης Ollama",
   "overwrite": "Αντικατάσταση",
+  "owner": "Owner",
   "packageName": "Όνομα πακέτου",
   "passLen": "Ο κωδικός πρόσβασης πρέπει να περιέχει τουλάχιστον 8 χαρακτήρες",
   "passMisMatch": "Οι κωδικοί πρόσβασης δεν ταιριάζουν",
@@ -159,6 +167,7 @@
   "pressBackAgainToExit": "Πατήστε πίσω ξανά για έξοδο",
   "proceed": "Συνέχεια",
   "profile": "Προφίλ",
+  "rawData": "Raw data",
   "register": "Εγγραφή",
   "repair": "Επισκευή",
   "repairDexError": "Error repairing DEX file: {e}",
@@ -180,6 +189,7 @@
   "repairing": "Επιδιόρθωση...",
   "reset": "Reset",
   "save": "Αποθήκευση",
+  "scheme": "Scheme",
   "searchApps": "Αναζήτηση εφαρμογών...",
   "selectAModel": "Επιλέξτε ένα μοντέλο για συνομιλία",
   "selectFiles": "Επιλογή Αρχείου {type}",
@@ -202,7 +212,10 @@
   },
   "setJarPath": "Ορισμός διαδρομής jar apkeditor",
   "setSystemMessage": "Ορισμός Μηνύματος Συστήματος",
+  "signature": "Signature",
+  "signInfo": "Signature Information",
   "smaliGrammar": "Γραμματική Σμάλι",
+  "status": "Status",
   "suggestLogin": "Έχετε ένα λογαριασμό? Είσοδος",
   "suggestRegister": "Χρειάζεστε λογαριασμό? Εγγραφή",
   "systemMessage": "Μήνυμα Συστήματος",
@@ -223,11 +236,13 @@
   "updateAvailable": "Διαθέσιμη Ενημέρωση",
   "updateAvailableMessage": "Μια νέα έκδοση της εφαρμογής είναι διαθέσιμη. Θα θέλατε να ενημερώσετε τώρα?",
   "uploading": "Μεταφόρτωση...",
+  "upperCase": "Upper case",
   "username": "Όνομα Χρήστη",
   "usernameCond": "Το όνομα χρήστη μπορεί να περιέχει μόνο γράμματα, αριθμούς και κάτω παύλα",
   "usernameLimit": "Το όνομα χρήστη πρέπει να είναι μεταξύ 5 και 15 χαρακτήρων",
   "validateModules": "Επικύρωση έκδοσης του base.apk με split APKs",
   "versionCode": "Κώδικας έκδοσης",
+  "viewData": "View Data",
   "vrd": "Επικύρωση ονόματος dir πόρων",
   "welcomeBack": "Καλώς Ήρθατε!"
 }
