--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -1,6 +1,8 @@
 {
   "about": "Acerca de",
+  "addColon": "Add colon",
   "aiChat": "Chat de IA",
+  "algorithm": "Algorithm",
   "analyze": "Analizar",
   "analyzing": "Analizando...",
   "apiKey": "Clave de API",
@@ -47,7 +49,10 @@
   "confirmPassword": "Confirmar contraseña",
   "continueAsGuest": "Continuar como invitado",
   "copiedToClipboard": "Copiado al portapapeles",
+  "copy": "Copy",
+  "copyBase64": "Copy Base64",
   "createAccount": "Crear cuenta",
+  "createDate": "Created",
   "dataDirectory": "Directorio de datos",
   "dataDirectory2": "Directorio de datos 2",
   "details": "Detalles",
@@ -66,6 +71,7 @@
   "enterUsername": "Por favor, introduzca su nombre de usuario",
   "errorDuringAnalysis": "Se produjo un error durante el análisis",
   "excludeSystemApps": "Excluir Aplicaciones del Sistema",
+  "expireDate": "Expired",
   "extractApk": "Extraer APK",
   "extractingApk": "Extrayendo APK",
   "failedToExtractFiles": "No se pudieron extraer los archivos del ZIP: {e}",
@@ -92,6 +98,7 @@
   "firstInstall": "Primera instalación",
   "flutterAnalysis": "Análisis de Flutter",
   "flutterAnalysisDesc": "Analizar librerías de Flutter",
+  "format": "Format",
   "generate": "Generar",
   "generating": "Generando...",
   "guestNotAllowed": "Los usuarios invitados no pueden usar esta función.",
@@ -148,6 +155,7 @@
   },
   "openOllamaLibrary": "Abrir biblioteca de Ollama",
   "overwrite": "Sobrescribir",
+  "owner": "Owner",
   "packageName": "Nombre del paquete",
   "passLen": "La contraseña debe tener al menos 8 caracteres",
   "passMisMatch": "Las contraseñas no coinciden",
@@ -159,6 +167,7 @@
   "pressBackAgainToExit": "Presione atrás otra vez para salir",
   "proceed": "Continuar",
   "profile": "Perfil",
+  "rawData": "Raw data",
   "register": "Registrarse",
   "repair": "Reparar",
   "repairDexError": "Error al reparar archivo DEX: {e}",
@@ -180,6 +189,7 @@
   "repairing": "Reparando...",
   "reset": "Reset",
   "save": "Guardar",
+  "scheme": "Scheme",
   "searchApps": "Buscar aplicaciones...",
   "selectAModel": "Seleccione un modelo para chatear",
   "selectFiles": "Seleccionar archivo {type}",
@@ -202,7 +212,10 @@
   },
   "setJarPath": "Establecer ruta del jar de apkeditor",
   "setSystemMessage": "Establecer mensaje del sistema",
+  "signature": "Signature",
+  "signInfo": "Signature Information",
   "smaliGrammar": "Gramática Smali",
+  "status": "Status",
   "suggestLogin": "¿Ya tienes cuenta? Iniciar sesión",
   "suggestRegister": "¿Ya tienes cuenta? Iniciar sesión",
   "systemMessage": "Mensaje del sistema",
@@ -223,11 +236,13 @@
   "updateAvailable": "Actualización disponible",
   "updateAvailableMessage": "Hay una nueva versión de la aplicación disponible. ¿Quieres actualizar ahora?",
   "uploading": "Subiendo...",
+  "upperCase": "Upper case",
   "username": "Usuario",
   "usernameCond": "El nombre de usuario solo puede contener letras, números y guiones bajos",
   "usernameLimit": "El nombre de usuario debe tener entre 5 y 15 caracteres",
   "validateModules": "Validar la versión de base.apk con APKs divididos",
   "versionCode": "Código de versión",
+  "viewData": "View Data",
   "vrd": "Validar el nombre del directorio de recursos",
   "welcomeBack": "¡Bienvenido de nuevo!"
 }
