--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -1,6 +1,8 @@
 {
   "about": "À propos de",
+  "addColon": "Add colon",
   "aiChat": "Chat IA",
+  "algorithm": "Algorithm",
   "analyze": "Analyser",
   "analyzing": "Analyse en cours...",
   "apiKey": "Clé API",
@@ -47,7 +49,10 @@
   "confirmPassword": "Confirmer le mot de passe",
   "continueAsGuest": "Continuer en tant qu'invité",
   "copiedToClipboard": "Copié dans le presse-papiers",
+  "copy": "Copy",
+  "copyBase64": "Copy Base64",
   "createAccount": "Créer un compte",
+  "createDate": "Created",
   "dataDirectory": "Répertoire des données",
   "dataDirectory2": "Répertoire de données 2",
   "details": "Détails du produit",
@@ -66,6 +71,7 @@
   "enterUsername": "Veuillez entrer le nom d'utilisateur",
   "errorDuringAnalysis": "Une erreur s'est produite lors de l'analyse",
   "excludeSystemApps": "Exclure les applications système",
+  "expireDate": "Expired",
   "extractApk": "Extraire l'APK",
   "extractingApk": "Extraction de l'APK",
   "failedToExtractFiles": "Impossible d'extraire les fichiers depuis le ZIP: {e}",
@@ -92,6 +98,7 @@
   "firstInstall": "Première installation",
   "flutterAnalysis": "Analyse de Flutter",
   "flutterAnalysisDesc": "Analyser les libs de Flutter",
+  "format": "Format",
   "generate": "Générer",
   "generating": "Génération en cours...",
   "guestNotAllowed": "Les utilisateurs invités ne peuvent pas utiliser cette fonctionnalité",
@@ -148,6 +155,7 @@
   },
   "openOllamaLibrary": "Ouvrir la bibliothèque Ollama",
   "overwrite": "Écraser",
+  "owner": "Owner",
   "packageName": "Nom du paquet",
   "passLen": "Le mot de passe doit comporter au moins 8 caractères",
   "passMisMatch": "Les mots de passe ne correspondent pas",
@@ -159,6 +167,7 @@
   "pressBackAgainToExit": "Appuyez à nouveau sur Retour pour quitter",
   "proceed": "Procéder",
   "profile": "Profil",
+  "rawData": "Raw data",
   "register": "Inscription",
   "repair": "Réparer",
   "repairDexError": "Erreur lors de la réparation du fichier DEX : {e}",
@@ -180,6 +189,7 @@
   "repairing": "Réparation en cours...",
   "reset": "Réinitialiser",
   "save": "Enregistrer",
+  "scheme": "Scheme",
   "searchApps": "Rechercher des applications...",
   "selectAModel": "Sélectionnez un modèle pour discuter",
   "selectFiles": "Sélectionner un fichier {type}",
@@ -202,7 +212,10 @@
   },
   "setJarPath": "Définir le chemin du jar de l'apkeditor",
   "setSystemMessage": "Définir le message système",
+  "signature": "Signature",
+  "signInfo": "Signature Information",
   "smaliGrammar": "Grammaire Smali",
+  "status": "Status",
   "suggestLogin": "Vous avez un compte ? Connectez-vous",
   "suggestRegister": "Besoin d'un compte ? Inscrivez-vous",
   "systemMessage": "Message système",
@@ -223,11 +236,13 @@
   "updateAvailable": "Mise à jour disponible",
   "updateAvailableMessage": "Une nouvelle version de l'application est disponible. Voulez-vous mettre à jour maintenant ?",
   "uploading": "Téléversement...",
+  "upperCase": "Upper case",
   "username": "Nom d'utilisateur",
   "usernameCond": "Le nom d'utilisateur ne peut contenir que des lettres, des chiffres et des tirets bas",
   "usernameLimit": "Le nom d'utilisateur doit contenir entre 5 et 15 caractères",
   "validateModules": "Valider la version de base.apk avec des APKs séparés",
   "versionCode": "Code de la version",
+  "viewData": "View Data",
   "vrd": "Valider le nom du répertoire des ressources",
   "welcomeBack": "Bienvenue!"
 }
