--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -1,6 +1,8 @@
 {
   "about": "Informazioni",
+  "addColon": "Add colon",
   "aiChat": "Chat AI",
+  "algorithm": "Algorithm",
   "analyze": "Analizza",
   "analyzing": "Analizzando...",
   "apiKey": "Chiave API",
@@ -47,7 +49,10 @@
   "confirmPassword": "Conferma Password",
   "continueAsGuest": "Continua come ospite",
   "copiedToClipboard": "Copiato negli appunti",
+  "copy": "Copy",
+  "copyBase64": "Copy Base64",
   "createAccount": "Crea Account",
+  "createDate": "Created",
   "dataDirectory": "Cartella dati",
   "dataDirectory2": "Cartella dati 2",
   "details": "Dettagli",
@@ -66,6 +71,7 @@
   "enterUsername": "Inserisci il nome utente",
   "errorDuringAnalysis": "Si è verificato un errore durante l'analisi",
   "excludeSystemApps": "Escludi App Di Sistema",
+  "expireDate": "Expired",
   "extractApk": "Estrai APK",
   "extractingApk": "Estrazione APK",
   "failedToExtractFiles": "Impossibile estrarre i file da ZIP: {e}",
@@ -92,6 +98,7 @@
   "firstInstall": "Prima installazione",
   "flutterAnalysis": "Analisi Flutter",
   "flutterAnalysisDesc": "Analizza libs Flutter",
+  "format": "Format",
   "generate": "Genera",
   "generating": "Generazione...",
   "guestNotAllowed": "Gli utenti ospiti non possono utilizzare questa funzione",
@@ -148,6 +155,7 @@
   },
   "openOllamaLibrary": "Apri Libreria Ollama",
   "overwrite": "Sovrascrivere",
+  "owner": "Owner",
   "packageName": "Nome pacchetto",
   "passLen": "La password deve contenere almeno 8 caratteri",
   "passMisMatch": "Le password non corrispondono",
@@ -159,6 +167,7 @@
   "pressBackAgainToExit": "Premi di nuovo indietro per uscire",
   "proceed": "Procedere",
   "profile": "Profilo",
+  "rawData": "Raw data",
   "register": "Registrati",
   "repair": "Riparazione",
   "repairDexError": "Errore nella riparazione del file DEX: {e}",
@@ -180,6 +189,7 @@
   "repairing": "Riparazione...",
   "reset": "Reset",
   "save": "Salva",
+  "scheme": "Scheme",
   "searchApps": "Cerca app...",
   "selectAModel": "Seleziona un modello da chattare",
   "selectFiles": "Seleziona File {type}",
@@ -202,7 +212,10 @@
   },
   "setJarPath": "Imposta percorso jar apkeditor",
   "setSystemMessage": "Imposta Messaggio Di Sistema",
+  "signature": "Signature",
+  "signInfo": "Signature Information",
   "smaliGrammar": "Grammatica Smali",
+  "status": "Status",
   "suggestLogin": "Hai un account? Accedi",
   "suggestRegister": "Hai bisogno di un account? Registrati",
   "systemMessage": "Messaggio Di Sistema",
@@ -223,11 +236,13 @@
   "updateAvailable": "Aggiornamento Disponibile",
   "updateAvailableMessage": "È disponibile una nuova versione dell'app. Vuoi aggiornare adesso?",
   "uploading": "Caricamento...",
+  "upperCase": "Upper case",
   "username": "Username",
   "usernameCond": "Il nome utente può contenere solo lettere, numeri e underscore",
   "usernameLimit": "Il nome utente deve essere compreso tra 5 e 15 caratteri",
   "validateModules": "Convalida la versione di base.apk con APK divisi",
   "versionCode": "Codice versione",
+  "viewData": "View Data",
   "vrd": "Convalida nome dir risorse",
   "welcomeBack": "Bentornato!"
 }
