--- a/lib/l10n/app_ja.arb
+++ b/lib/l10n/app_ja.arb
@@ -1,6 +1,8 @@
 {
   "about": "About",
+  "addColon": "Add colon",
   "aiChat": "AIチャット",
+  "algorithm": "Algorithm",
   "analyze": "分析",
   "analyzing": "分析中...",
   "apiKey": "API キー",
@@ -47,7 +49,10 @@
   "confirmPassword": "パスワードの確認",
   "continueAsGuest": "ゲストとして続ける",
   "copiedToClipboard": "クリップボードにコピーしました",
+  "copy": "Copy",
+  "copyBase64": "Copy Base64",
   "createAccount": "アカウントを作成",
+  "createDate": "Created",
   "dataDirectory": "データディレクトリ",
   "dataDirectory2": "データディレクトリ 2",
   "details": "詳細",
@@ -66,6 +71,7 @@
   "enterUsername": "ユーザー名を入力してください",
   "errorDuringAnalysis": "分析中にエラーが発生しました",
   "excludeSystemApps": "システムアプリを除外",
+  "expireDate": "Expired",
   "extractApk": "APKを抽出",
   "extractingApk": "APK を抽出中",
   "failedToExtractFiles": "ZIPからファイルを抽出できませんでした: {e}",
@@ -92,6 +98,7 @@
   "firstInstall": "最初にインストールする",
   "flutterAnalysis": "Flutter Analysis",
   "flutterAnalysisDesc": "Flutter libs を分析する",
+  "format": "Format",
   "generate": "生成",
   "generating": "生成中...",
   "guestNotAllowed": "ゲストユーザーはこの機能を使用できません",
@@ -148,6 +155,7 @@
   },
   "openOllamaLibrary": "Ollama図書館を開く",
   "overwrite": "上書き",
+  "owner": "Owner",
   "packageName": "パッケージ名",
   "passLen": "パスワードは8文字以上でなければなりません",
   "passMisMatch": "パスワードが一致しません",
@@ -159,6 +167,7 @@
   "pressBackAgainToExit": "もう一度押すと終了します",
   "proceed": "続行する",
   "profile": "プロフィール",
+  "rawData": "Raw data",
   "register": "登録",
   "repair": "修復",
   "repairDexError": "DEXファイルの修復エラー: {e}",
@@ -180,6 +189,7 @@
   "repairing": "修理中...",
   "reset": "Reset",
   "save": "保存",
+  "scheme": "Scheme",
   "searchApps": "アプリを検索...",
   "selectAModel": "チャットするモデルを選択",
   "selectFiles": "{type} ファイルを選択",
@@ -202,7 +212,10 @@
   },
   "setJarPath": "apkeditor jar パスを設定",
   "setSystemMessage": "システムメッセージを設定",
+  "signature": "Signature",
+  "signInfo": "Signature Information",
   "smaliGrammar": "Smali Grammar",
+  "status": "Status",
   "suggestLogin": "アカウントをお持ちですか？ログイン",
   "suggestRegister": "アカウントが必要ですか？登録",
   "systemMessage": "システムメッセージ",
@@ -223,11 +236,13 @@
   "updateAvailable": "アップデートがあります",
   "updateAvailableMessage": "アプリの新しいバージョンが利用可能です。今すぐアップデートしますか？",
   "uploading": "アップロード中...",
+  "upperCase": "Upper case",
   "username": "ユーザー名",
   "usernameCond": "ユーザー名には、文字、数字、およびアンダースコアのみを含めることができます",
   "usernameLimit": "ユーザー名は5文字以上15文字以下で入力してください",
   "validateModules": "base.apkのバージョンを分割APKで検証する",
   "versionCode": "バージョンコード",
+  "viewData": "View Data",
   "vrd": "リソースのディレクトリ名を検証する",
   "welcomeBack": "おかえりなさい！"
 }
