--- a/lib/l10n/app_nl.arb
+++ b/lib/l10n/app_nl.arb
@@ -1,6 +1,8 @@
 {
   "about": "Informatie",
+  "addColon": "Add colon",
   "aiChat": "AI chat",
+  "algorithm": "Algorithm",
   "analyze": "Analyseren",
   "analyzing": "Analyseren...",
   "apiKey": "API Sleutel",
@@ -47,7 +49,10 @@
   "confirmPassword": "Bevestig wachtwoord",
   "continueAsGuest": "Doorgaan als gast",
   "copiedToClipboard": "Gekopieerd naar klembord",
+  "copy": "Copy",
+  "copyBase64": "Copy Base64",
   "createAccount": "Account Aanmaken",
+  "createDate": "Created",
   "dataDirectory": "Data map",
   "dataDirectory2": "Gegevensmap 2",
   "details": "Beschrijving",
@@ -66,6 +71,7 @@
   "enterUsername": "Voer gebruikersnaam in",
   "errorDuringAnalysis": "Er is een fout opgetreden tijdens de analyse",
   "excludeSystemApps": "Uitsluiten van systeem apps",
+  "expireDate": "Expired",
   "extractApk": "APK uitpakken",
   "extractingApk": "APK uitpakken",
   "failedToExtractFiles": "Uitpakken van bestanden van ZIP: {e} mislukt",
@@ -92,6 +98,7 @@
   "firstInstall": "Eerste installatie",
   "flutterAnalysis": "Flutter analyse",
   "flutterAnalysisDesc": "Flutter libs analyseren",
+  "format": "Format",
   "generate": "Genereren",
   "generating": "Genereren...",
   "guestNotAllowed": "Gastgebruikers kunnen deze functie niet gebruiken",
@@ -148,6 +155,7 @@
   },
   "openOllamaLibrary": "Open Ollama Bibliotheek",
   "overwrite": "Overschrijf",
+  "owner": "Owner",
   "packageName": "Pakket naam",
   "passLen": "Wachtwoord moet ten minste 8 tekens bevatten",
   "passMisMatch": "Wachtwoorden komen niet overeen",
@@ -159,6 +167,7 @@
   "pressBackAgainToExit": "Druk nogmaals op terug om af te sluiten",
   "proceed": "Doorgaan",
   "profile": "Profiel",
+  "rawData": "Raw data",
   "register": "Registreren",
   "repair": "Herstellen",
   "repairDexError": "Fout bij het repareren van DEX-bestand: {e}",
@@ -180,6 +189,7 @@
   "repairing": "Herstellen...",
   "reset": "Reset",
   "save": "Opslaan",
+  "scheme": "Scheme",
   "searchApps": "Apps zoeken...",
   "selectAModel": "Selecteer een model om te chatten",
   "selectFiles": "Selecteer {type} bestand",
@@ -202,7 +212,10 @@
   },
   "setJarPath": "Stel apkeditor pad in",
   "setSystemMessage": "Systeembericht instellen",
+  "signature": "Signature",
+  "signInfo": "Signature Information",
   "smaliGrammar": "Smali Grammatica",
+  "status": "Status",
   "suggestLogin": "Heb je een account? Log in",
   "suggestRegister": "Een account nodig? Registreren",
   "systemMessage": "Systeem bericht",
@@ -223,11 +236,13 @@
   "updateAvailable": "Update beschikbaar",
   "updateAvailableMessage": "Er is een nieuwe versie van de app beschikbaar. Wil je nu bijwerken?",
   "uploading": "Uploaden...",
+  "upperCase": "Upper case",
   "username": "Gebruikersnaam",
   "usernameCond": "Gebruikersnaam mag alleen letters, cijfers en onderstrepingstekens bevatten",
   "usernameLimit": "Gebruikersnaam moet tussen 5 en 15 tekens lang zijn",
   "validateModules": "Valideer de versie van de base.apk met gesplitste APK's",
   "versionCode": "Versie code",
+  "viewData": "View Data",
   "vrd": "Valideer resources map naam",
   "welcomeBack": "Welkom terug!"
 }
