--- a/lib/l10n/app_no.arb
+++ b/lib/l10n/app_no.arb
@@ -1,6 +1,8 @@
 {
   "about": "Om",
+  "addColon": "Add colon",
   "aiChat": "AI chat",
+  "algorithm": "Algorithm",
   "analyze": "Analyser",
   "analyzing": "Analyserer...",
   "apiKey": "API-nøkkel (Automatic Translation)",
@@ -47,7 +49,10 @@
   "confirmPassword": "Bekreft passord",
   "continueAsGuest": "Fortsett som gjest",
   "copiedToClipboard": "Kopiert til utklippstavle",
+  "copy": "Copy",
+  "copyBase64": "Copy Base64",
   "createAccount": "Opprett konto",
+  "createDate": "Created",
   "dataDirectory": "Datamaskin katalog",
   "dataDirectory2": "Datakatalog 2",
   "details": "Detaljer",
@@ -66,6 +71,7 @@
   "enterUsername": "Skriv inn brukernavn",
   "errorDuringAnalysis": "En feil oppstod under analysen",
   "excludeSystemApps": "Ekskluder systemapper",
+  "expireDate": "Expired",
   "extractApk": "Pakk ut APK",
   "extractingApk": "Trekker ut APK",
   "failedToExtractFiles": "Kan ikke pakke ut filer fra ZIP: {e}",
@@ -92,6 +98,7 @@
   "firstInstall": "Første installasjon",
   "flutterAnalysis": "Flutter analyse",
   "flutterAnalysisDesc": "Analyser libs",
+  "format": "Format",
   "generate": "Generer",
   "generating": "Genererer...",
   "guestNotAllowed": "Gjeste-brukere kan ikke bruke denne funksjonen",
@@ -148,6 +155,7 @@
   },
   "openOllamaLibrary": "Åpne Ollama bibliotek",
   "overwrite": "Overskriv",
+  "owner": "Owner",
   "packageName": "Navn på pakke",
   "passLen": "Passordet må være minst 8 tegn",
   "passMisMatch": "Passordene samsvarer ikke",
@@ -159,6 +167,7 @@
   "pressBackAgainToExit": "Trykk tilbake igjen for å avslutte",
   "proceed": "Fortsett",
   "profile": "Profil",
+  "rawData": "Raw data",
   "register": "Registrer",
   "repair": "Reparer",
   "repairDexError": "Feil under reparering av DEX-fil: {e}",
@@ -180,6 +189,7 @@
   "repairing": "Reparerer...",
   "reset": "Reset",
   "save": "Lagre",
+  "scheme": "Scheme",
   "searchApps": "Søk etter apper...",
   "selectAModel": "Velg en modell å chatte",
   "selectFiles": "Velg {type} fil",
@@ -202,7 +212,10 @@
   },
   "setJarPath": "Angi sti for apkeditor",
   "setSystemMessage": "Sett systemmelding",
+  "signature": "Signature",
+  "signInfo": "Signature Information",
   "smaliGrammar": "Smali grammatikk",
+  "status": "Status",
   "suggestLogin": "Har du en konto? Logg inn",
   "suggestRegister": "Trenger du en konto? Registrer",
   "systemMessage": "System Melding",
@@ -223,11 +236,13 @@
   "updateAvailable": "Oppdatering tilgjengelig",
   "updateAvailableMessage": "En ny versjon av appen er tilgjengelig. Ønsker du å oppdatere nå?",
   "uploading": "Laster opp...",
+  "upperCase": "Upper case",
   "username": "Brukernavn",
   "usernameCond": "Brukernavnet kan bare inneholde bokstaver, tall og understrekingstegn",
   "usernameLimit": "Brukernavnet må være mellom 5 og 15 tegn",
   "validateModules": "Valider versjon av base.apk med splittede APK-er",
   "versionCode": "Versjonskode",
+  "viewData": "View Data",
   "vrd": "Valider ressurs dir navn",
   "welcomeBack": "Velkommen tilbake!"
 }
