--- a/lib/l10n/app_pl.arb
+++ b/lib/l10n/app_pl.arb
@@ -1,6 +1,8 @@
 {
   "about": "O programie",
+  "addColon": "Add colon",
   "aiChat": "Czat SI",
+  "algorithm": "Algorithm",
   "analyze": "Analizuj",
   "analyzing": "Analizowanie...",
   "apiKey": "Klucz API",
@@ -47,7 +49,10 @@
   "confirmPassword": "Potwierdź hasło",
   "continueAsGuest": "Kontynuuj jako gość",
   "copiedToClipboard": "Skopiowano do schowka",
+  "copy": "Copy",
+  "copyBase64": "Copy Base64",
   "createAccount": "Utwórz konto",
+  "createDate": "Created",
   "dataDirectory": "Katalog danych",
   "dataDirectory2": "Katalog danych 2",
   "details": "Szczegóły",
@@ -66,6 +71,7 @@
   "enterUsername": "Wprowadź nazwę użytkownika",
   "errorDuringAnalysis": "Wystąpił błąd podczas analizy",
   "excludeSystemApps": "Wyklucz aplikacje systemowe",
+  "expireDate": "Expired",
   "extractApk": "Wyodrębnij APK",
   "extractingApk": "Rozpakowywanie APK",
   "failedToExtractFiles": "Nie udało się wyodrębnić plików z ZIP: {e}",
@@ -92,6 +98,7 @@
   "firstInstall": "Pierwsza instalacja",
   "flutterAnalysis": "Analiza strumienia powietrza",
   "flutterAnalysisDesc": "Analizuj biblioteki Fluttera",
+  "format": "Format",
   "generate": "Wygeneruj",
   "generating": "Generowanie...",
   "guestNotAllowed": "Użytkownicy gości nie mogą używać tej funkcji",
@@ -148,6 +155,7 @@
   },
   "openOllamaLibrary": "Otwórz bibliotekę Ollama",
   "overwrite": "Nadpisz",
+  "owner": "Owner",
   "packageName": "Nazwa pakietu",
   "passLen": "Hasło musi mieć co najmniej 8 znaków",
   "passMisMatch": "Hasła nie pasują",
@@ -159,6 +167,7 @@
   "pressBackAgainToExit": "Naciśnij ponownie ponownie, aby wyjść",
   "proceed": "Kontynuuj",
   "profile": "Profil",
+  "rawData": "Raw data",
   "register": "Rejestracja",
   "repair": "Naprawa",
   "repairDexError": "Błąd podczas naprawy pliku DEX: {e}",
@@ -180,6 +189,7 @@
   "repairing": "Naprawianie...",
   "reset": "Reset",
   "save": "Zapisz",
+  "scheme": "Scheme",
   "searchApps": "Szukaj aplikacji...",
   "selectAModel": "Wybierz model do czatu",
   "selectFiles": "Wybierz plik {type}",
@@ -202,7 +212,10 @@
   },
   "setJarPath": "Ustaw ścieżkę jar edytora apkeditor",
   "setSystemMessage": "Ustaw wiadomość systemową",
+  "signature": "Signature",
+  "signInfo": "Signature Information",
   "smaliGrammar": "Smali Grammar",
+  "status": "Status",
   "suggestLogin": "Masz konto? Zaloguj się",
   "suggestRegister": "Potrzebujesz konta? Zarejestruj się",
   "systemMessage": "Wiadomość systemowa",
@@ -223,11 +236,13 @@
   "updateAvailable": "Dostępna aktualizacja",
   "updateAvailableMessage": "Dostępna jest nowa wersja aplikacji. Czy chcesz teraz zaktualizować?",
   "uploading": "Wgrywanie...",
+  "upperCase": "Upper case",
   "username": "Nazwa użytkownika",
   "usernameCond": "Nazwa użytkownika może zawierać tylko litery, cyfry i podkreślenia",
   "usernameLimit": "Nazwa użytkownika musi mieć od 5 do 15 znaków",
   "validateModules": "Zatwierdź wersję base.apk z podzielonymi APK",
   "versionCode": "Kod wersji",
+  "viewData": "View Data",
   "vrd": "Potwierdź nazwę katalogu zasobów",
   "welcomeBack": "Witaj ponownie!"
 }
