--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -1,6 +1,8 @@
 {
   "about": "SOBRE",
+  "addColon": "Add colon",
   "aiChat": "Chat IA",
+  "algorithm": "Algorithm",
   "analyze": "Analisar",
   "analyzing": "Analisando...",
   "apiKey": "Chave de API",
@@ -47,7 +49,10 @@
   "confirmPassword": "Confirmar senha",
   "continueAsGuest": "Continuar como Convidado",
   "copiedToClipboard": "Copiado para o clipboard",
+  "copy": "Copy",
+  "copyBase64": "Copy Base64",
   "createAccount": "Criar conta",
+  "createDate": "Created",
   "dataDirectory": "Diretório de dados",
   "dataDirectory2": "Diretório de dados 2",
   "details": "detalhes",
@@ -66,6 +71,7 @@
   "enterUsername": "Insira o nome de usuário",
   "errorDuringAnalysis": "Ocorreu um erro durante a análise",
   "excludeSystemApps": "Excluir aplicativos do sistema",
+  "expireDate": "Expired",
   "extractApk": "Extrair APK",
   "extractingApk": "Extraindo o APK",
   "failedToExtractFiles": "Falha ao extrair arquivos do ZIP: {e}",
@@ -92,6 +98,7 @@
   "firstInstall": "Primeira instalação",
   "flutterAnalysis": "Análise de Flauta",
   "flutterAnalysisDesc": "Analisar tampas flamejantes",
+  "format": "Format",
   "generate": "Gerar",
   "generating": "Gerando...",
   "guestNotAllowed": "Usuários convidados não podem usar este recurso",
@@ -148,6 +155,7 @@
   },
   "openOllamaLibrary": "Abrir Biblioteca Ollama",
   "overwrite": "Substituir",
+  "owner": "Owner",
   "packageName": "Nome do pacote",
   "passLen": "A senha deve ter pelo menos 8 caracteres",
   "passMisMatch": "As senhas não coincidem",
@@ -159,6 +167,7 @@
   "pressBackAgainToExit": "Pressione voltar novamente para sair",
   "proceed": "Continuar",
   "profile": "Perfil",
+  "rawData": "Raw data",
   "register": "Cadastrar",
   "repair": "Reparação",
   "repairDexError": "Erro ao reparar arquivo DEX: {e}",
@@ -180,6 +189,7 @@
   "repairing": "Reparando...",
   "reset": "Reset",
   "save": "Guardar",
+  "scheme": "Scheme",
   "searchApps": "Pesquisar aplicativos...",
   "selectAModel": "Selecione um modelo para bater papo",
   "selectFiles": "Selecionar Arquivo {type}",
@@ -202,7 +212,10 @@
   },
   "setJarPath": "Definir caminho para apkeditor jar",
   "setSystemMessage": "Definir Mensagem do Sistema",
+  "signature": "Signature",
+  "signInfo": "Signature Information",
   "smaliGrammar": "Gramática Smali",
+  "status": "Status",
   "suggestLogin": "Tem uma conta? Entrar",
   "suggestRegister": "Precisa de uma conta? Registre-se",
   "systemMessage": "Sistema de mensagem",
@@ -223,11 +236,13 @@
   "updateAvailable": "Atualização disponível",
   "updateAvailableMessage": "Uma nova versão do app está disponível. Gostaria de atualizar agora?",
   "uploading": "Enviando...",
+  "upperCase": "Upper case",
   "username": "Usuário:",
   "usernameCond": "O nome de usuário só pode conter letras, números e sublinhado",
   "usernameLimit": "O nome de usuário deve ter entre 5 e 15 caracteres",
   "validateModules": "Validar a versão de base.apk com APKs divididos",
   "versionCode": "Código da versão",
+  "viewData": "View Data",
   "vrd": "Validar nome do diretório de recursos",
   "welcomeBack": "Bem-vindo(a) de volta!"
 }
