--- a/lib/l10n/app_ro.arb
+++ b/lib/l10n/app_ro.arb
@@ -1,6 +1,8 @@
 {
   "about": "Despre",
+  "addColon": "Add colon",
   "aiChat": "Chat AI",
+  "algorithm": "Algorithm",
   "analyze": "Analizează",
   "analyzing": "Analizare...",
   "apiKey": "Cheie API",
@@ -47,7 +49,10 @@
   "confirmPassword": "Confirmare parolă",
   "continueAsGuest": "Continuă ca Vizitator",
   "copiedToClipboard": "Copiat în clipboard",
+  "copy": "Copy",
+  "copyBase64": "Copy Base64",
   "createAccount": "Creare cont",
+  "createDate": "Created",
   "dataDirectory": "Director de date",
   "dataDirectory2": "Dosar de date 2",
   "details": "Detalii",
@@ -66,6 +71,7 @@
   "enterUsername": "Introdu numele de utilizator",
   "errorDuringAnalysis": "A apărut o eroare în timpul analizei",
   "excludeSystemApps": "Exclude aplicațiile de sistem",
+  "expireDate": "Expired",
   "extractApk": "Extrage APK",
   "extractingApk": "Extragere APK",
   "failedToExtractFiles": "Nu s-a reușit extragerea fișierelor din ZIP: {e}",
@@ -92,6 +98,7 @@
   "firstInstall": "Prima instalare",
   "flutterAnalysis": "Analiză Flutter",
   "flutterAnalysisDesc": "Analizează frezele Flutter",
+  "format": "Format",
   "generate": "Genereaza",
   "generating": "Generare...",
   "guestNotAllowed": "Utilizatorii oaspeţi nu pot utiliza această funcţie",
@@ -148,6 +155,7 @@
   },
   "openOllamaLibrary": "Deschide Biblioteca Ollama",
   "overwrite": "Suprascrie",
+  "owner": "Owner",
   "packageName": "Numele pachetului",
   "passLen": "Parola trebuie să conțină cel puțin 8 caractere",
   "passMisMatch": "Parolele nu corespund",
@@ -159,6 +167,7 @@
   "pressBackAgainToExit": "Apăsați înapoi din nou pentru a ieși",
   "proceed": "Continuă",
   "profile": "Profil",
+  "rawData": "Raw data",
   "register": "Inregistrare",
   "repair": "Repară",
   "repairDexError": "Eroare reparare fișier DEX: {e}",
@@ -180,6 +189,7 @@
   "repairing": "Reparați...",
   "reset": "Reset",
   "save": "Salvează",
+  "scheme": "Scheme",
   "searchApps": "Căutare aplicații...",
   "selectAModel": "Selectați un model pentru a discuta",
   "selectFiles": "Selectați {type} Fișier",
@@ -202,7 +212,10 @@
   },
   "setJarPath": "Setează calea apkeditor jar",
   "setSystemMessage": "Setare mesaj de sistem",
+  "signature": "Signature",
+  "signInfo": "Signature Information",
   "smaliGrammar": "Smali Grammar",
+  "status": "Status",
   "suggestLogin": "Ai un cont? Autentifică-te",
   "suggestRegister": "Ai nevoie de un cont? Înregistrează-te",
   "systemMessage": "Mesaj de sistem",
@@ -223,11 +236,13 @@
   "updateAvailable": "Actualizare disponibilă",
   "updateAvailableMessage": "O nouă versiune a aplicației este disponibilă. Doriți să actualizați acum?",
   "uploading": "Încărcare...",
+  "upperCase": "Upper case",
   "username": "Nume",
   "usernameCond": "Numele de utilizator poate conține doar litere, numere și underscore",
   "usernameLimit": "Numele de utilizator trebuie să aibă între 5 și 15 caractere",
   "validateModules": "Validați versiunea de base.apk cu APK-uri împărțite",
   "versionCode": "Cod versiune",
+  "viewData": "View Data",
   "vrd": "Validare nume resurse dir",
   "welcomeBack": "Bine ai revenit!"
 }
