--- a/lib/l10n/app_sv.arb
+++ b/lib/l10n/app_sv.arb
@@ -1,6 +1,8 @@
 {
   "about": "Om",
+  "addColon": "Add colon",
   "aiChat": "AI Chatt",
+  "algorithm": "Algorithm",
   "analyze": "Analysera",
   "analyzing": "Analyserar...",
   "apiKey": "API nyckel",
@@ -47,7 +49,10 @@
   "confirmPassword": "Bekräfta lösenord",
   "continueAsGuest": "Fortsätt som gäst",
   "copiedToClipboard": "Kopierad till urklipp",
+  "copy": "Copy",
+  "copyBase64": "Copy Base64",
   "createAccount": "Skapa konto",
+  "createDate": "Created",
   "dataDirectory": "Datakatalog",
   "dataDirectory2": "Datakatalog 2",
   "details": "Detaljer",
@@ -66,6 +71,7 @@
   "enterUsername": "Ange användarnamn",
   "errorDuringAnalysis": "Ett fel inträffade under analysen",
   "excludeSystemApps": "Exkludera systemappar",
+  "expireDate": "Expired",
   "extractApk": "Extrahera APK",
   "extractingApk": "Extraherar APK",
   "failedToExtractFiles": "Det gick inte att extrahera filer från ZIP: {e}",
@@ -92,6 +98,7 @@
   "firstInstall": "Första installationen",
   "flutterAnalysis": "Flutter Analys",
   "flutterAnalysisDesc": "Analysera Flutter libs",
+  "format": "Format",
   "generate": "Generera",
   "generating": "Genererar...",
   "guestNotAllowed": "Gästanvändare kan inte använda denna funktion",
@@ -148,6 +155,7 @@
   },
   "openOllamaLibrary": "Öppna Ollama-biblioteket",
   "overwrite": "Skriv över",
+  "owner": "Owner",
   "packageName": "Paketets namn",
   "passLen": "Lösenordet måste vara minst 8 tecken",
   "passMisMatch": "Lösenorden matchar inte",
@@ -159,6 +167,7 @@
   "pressBackAgainToExit": "Tryck tillbaka igen för att avsluta",
   "proceed": "Fortsätt",
   "profile": "Profil",
+  "rawData": "Raw data",
   "register": "Registrera",
   "repair": "Reparera",
   "repairDexError": "Fel vid reparation av DEX-filen: {e}",
@@ -180,6 +189,7 @@
   "repairing": "Reparerar...",
   "reset": "Reset",
   "save": "Spara",
+  "scheme": "Scheme",
   "searchApps": "Sök appar...",
   "selectAModel": "Välj en modell att chatta",
   "selectFiles": "Välj {type} fil",
@@ -202,7 +212,10 @@
   },
   "setJarPath": "Ange apkeditor jar sökväg",
   "setSystemMessage": "Ställ in systemmeddelande",
+  "signature": "Signature",
+  "signInfo": "Signature Information",
   "smaliGrammar": "Smali Grammatik",
+  "status": "Status",
   "suggestLogin": "Har du ett konto? Logga in",
   "suggestRegister": "Behöver du ett konto? Registrera",
   "systemMessage": "System meddelande",
@@ -223,11 +236,13 @@
   "updateAvailable": "Uppdatering tillgänglig",
   "updateAvailableMessage": "En ny version av appen finns tillgänglig. Vill du uppdatera nu?",
   "uploading": "Uppladdar...",
+  "upperCase": "Upper case",
   "username": "Användarnamn",
   "usernameCond": "Användarnamnet kan endast innehålla bokstäver, siffror och understreck",
   "usernameLimit": "Användarnamnet måste vara mellan 5 och 15 tecken",
   "validateModules": "Validera version av base.apk med delade APK:er",
   "versionCode": "Versionskod",
+  "viewData": "View Data",
   "vrd": "Validera resursnamn",
   "welcomeBack": "Välkommen tillbaka!"
 }
