--- a/lib/l10n/app_tr.arb
+++ b/lib/l10n/app_tr.arb
@@ -1,6 +1,8 @@
 {
   "about": "Hakkında",
+  "addColon": "Add colon",
   "aiChat": "AI Sohbet",
+  "algorithm": "Algorithm",
   "analyze": "Analiz",
   "analyzing": "Analiz ediliyor...",
   "apiKey": "API Anahtarı",
@@ -47,7 +49,10 @@
   "confirmPassword": "Parolayı onayla",
   "continueAsGuest": "Misafir olarak devam et",
   "copiedToClipboard": "Panoya kopyala",
+  "copy": "Copy",
+  "copyBase64": "Copy Base64",
   "createAccount": "Hesap Oluştur",
+  "createDate": "Created",
   "dataDirectory": "Data directory",
   "dataDirectory2": "Data directory 2",
   "details": "Details",
@@ -66,6 +71,7 @@
   "enterUsername": "Lütfen kullanıcı adını girin",
   "errorDuringAnalysis": "Analiz sırasında bir hata oluştu",
   "excludeSystemApps": "Exclude System Apps",
+  "expireDate": "Expired",
   "extractApk": "Extract APK",
   "extractingApk": "Extracting APK",
   "failedToExtractFiles": "Dosyalar ZIP dosyasından çıkarılamadı: {e}",
@@ -92,6 +98,7 @@
   "firstInstall": "First install",
   "flutterAnalysis": "Flutter Analizi",
   "flutterAnalysisDesc": "Flutter libs analizi",
+  "format": "Format",
   "generate": "Oluştur",
   "generating": "Oluşturuluyor...",
   "guestNotAllowed": "Misafir kullanıcılar bu özelliği kullanamazlar.",
@@ -148,6 +155,7 @@
   },
   "openOllamaLibrary": "Ollama kütüphanesini aç",
   "overwrite": "Overwrite",
+  "owner": "Owner",
   "packageName": "Package name",
   "passLen": "Parola en az 8 karakterden oluşmalıdır.",
   "passMisMatch": "Parola eşleşmiyor",
@@ -159,6 +167,7 @@
   "pressBackAgainToExit": "Press back again to exit",
   "proceed": "Devam et",
   "profile": "Profil",
+  "rawData": "Raw data",
   "register": "Kayıt ol",
   "repair": "Düzelt",
   "repairDexError": "DEX dosyaları düzeltilirken hata oluştu: {e}",
@@ -180,6 +189,7 @@
   "repairing": "Düzeltiliyor...",
   "reset": "Sıfırla",
   "save": "Kaydet",
+  "scheme": "Scheme",
   "searchApps": "Search apps...",
   "selectAModel": "Sohbet için bir model seç",
   "selectFiles": "{type} Dosyası Seç",
@@ -202,7 +212,10 @@
   },
   "setJarPath": "Apkeditor JAR yolunu gir",
   "setSystemMessage": "Sistem Mesajı Ayarla",
+  "signature": "Signature",
+  "signInfo": "Signature Information",
   "smaliGrammar": "Smali DilBilgisi",
+  "status": "Status",
   "suggestLogin": "Hesabın mı var? Giriş yap",
   "suggestRegister": "Hesabın yok mu? Kaydol",
   "systemMessage": "Sistem Mesajı",
@@ -223,11 +236,13 @@
   "updateAvailable": "Güncelleme Mevcut",
   "updateAvailableMessage": "Uygulamanın yeni bir sürümü mevcut. Şimdi güncellemek ister misiniz?",
   "uploading": "Yükleniyor...",
+  "upperCase": "Upper case",
   "username": "Kullanıcı adı",
   "usernameCond": "Kullanıcı adı yalnızca harfler, rakamlar ve alt çizgi içerebilir.",
   "usernameLimit": "Kullanıcı adı 5 ile 15 karakter arasında olmalıdır.",
   "validateModules": "base.apk sürümünü bölünmüş APKs dosyaları ile doğrula",
   "versionCode": "Version code",
+  "viewData": "View Data",
   "vrd": "Kaynaklar dizini adını doğrula",
   "welcomeBack": "Tekrar Hoş geldin!"
 }
