--- a/lib/l10n/app_uk.arb
+++ b/lib/l10n/app_uk.arb
@@ -1,6 +1,8 @@
 {
   "about": "Про програму",
+  "addColon": "Add colon",
   "aiChat": "Чат",
+  "algorithm": "Algorithm",
   "analyze": "Аналізувати",
   "analyzing": "Аналізуємо...",
   "apiKey": "API ключ",
@@ -47,7 +49,10 @@
   "confirmPassword": "Підтвердити пароль",
   "continueAsGuest": "Продовжити як гість",
   "copiedToClipboard": "Скопійовано до буферу обміну",
+  "copy": "Copy",
+  "copyBase64": "Copy Base64",
   "createAccount": "Створити обл. запис",
+  "createDate": "Created",
   "dataDirectory": "Каталог даних",
   "dataDirectory2": "Каталог даних 2",
   "details": "Подробиці",
@@ -66,6 +71,7 @@
   "enterUsername": "Будь ласка, введіть ім'я користувача",
   "errorDuringAnalysis": "Сталася помилка під час аналізу",
   "excludeSystemApps": "Вимкнути системні програми",
+  "expireDate": "Expired",
   "extractApk": "Розпакувати APK-файл",
   "extractingApk": "Розпакування APK-файлу",
   "failedToExtractFiles": "Failed to extract files from ZIP: {e}",
@@ -92,6 +98,7 @@
   "firstInstall": "Перше встановлення",
   "flutterAnalysis": "Пробний аналіз",
   "flutterAnalysisDesc": "Аналізувати очищання",
+  "format": "Format",
   "generate": "Генерувати",
   "generating": "Створення...",
   "guestNotAllowed": "Користувачі не можуть використовувати цю функцію",
@@ -148,6 +155,7 @@
   },
   "openOllamaLibrary": "Відкрити бібліотеку Оллама",
   "overwrite": "Перезаписати",
+  "owner": "Owner",
   "packageName": "Назва пакету",
   "passLen": "Пароль має складатися хоча б з 8 символів",
   "passMisMatch": "Паролі не збігаються",
@@ -159,6 +167,7 @@
   "pressBackAgainToExit": "Натисніть ще раз, щоб вийти",
   "proceed": "Далі",
   "profile": "Анкета",
+  "rawData": "Raw data",
   "register": "Зареєструватися",
   "repair": "Відновити",
   "repairDexError": "Помилка при ремонті файлу DEX: {e}",
@@ -180,6 +189,7 @@
   "repairing": "Відновлення...",
   "reset": "Reset",
   "save": "Зберегти",
+  "scheme": "Scheme",
   "searchApps": "Пошук додатків...",
   "selectAModel": "Виберіть модель для чату",
   "selectFiles": "Виберіть {type} файл",
@@ -202,7 +212,10 @@
   },
   "setJarPath": "Встановити шлях apkeditor jar",
   "setSystemMessage": "Установити системне повідомлення",
+  "signature": "Signature",
+  "signInfo": "Signature Information",
   "smaliGrammar": "Смалі Граматика",
+  "status": "Status",
   "suggestLogin": "Вже маєте обліковий запис? Увійдіть",
   "suggestRegister": "Потрібен обліковий запис? Зареєструватися",
   "systemMessage": "Системне повідомлення",
@@ -223,11 +236,13 @@
   "updateAvailable": "Доступне оновлення",
   "updateAvailableMessage": "Доступна нова версія програми. Оновити зараз?",
   "uploading": "Відвантаження...",
+  "upperCase": "Upper case",
   "username": "Ім'я користувача",
   "usernameCond": "Ім'я користувача може містити лише літери, цифри та підкреслення",
   "usernameLimit": "Ім'я користувача повинно бути від 5 до 15 символів",
   "validateModules": "Перевірити версію base.apk з розділом APK",
   "versionCode": "Версія коду",
+  "viewData": "View Data",
   "vrd": "Перевірити ім'я ресурсів dir",
   "welcomeBack": "З поверненням!"
 }
