--- a/lib/l10n/app_cs.arb
+++ b/lib/l10n/app_cs.arb
@@ -1,6 +1,8 @@
 {
   "about": "O aplikaci",
+  "addColon": "Add colon",
   "aiChat": "AI chat",
+  "algorithm": "Algorithm",
   "analyze": "Analyzovat",
   "analyzing": "Analyzuji...",
   "apiKey": "API klíč",
@@ -47,7 +49,10 @@
   "confirmPassword": "Potvrzení hesla",
   "continueAsGuest": "Pokračovat jako hosta",
   "copiedToClipboard": "Zkopírováno do schránky",
+  "copy": "Copy",
+  "copyBase64": "Copy Base64",
   "createAccount": "Vytvořit účet",
+  "createDate": "Created",
   "dataDirectory": "Datový adresář",
   "dataDirectory2": "Datový adresář 2",
   "details": "Detaily",
@@ -66,6 +71,7 @@
   "enterUsername": "Zadejte prosím uživatelské jméno",
   "errorDuringAnalysis": "Došlo k chybě během analýzy",
   "excludeSystemApps": "Vyloučit systémové aplikace",
+  "expireDate": "Expired",
   "extractApk": "Extrahovat APK",
   "extractingApk": "Extrahování APK",
   "failedToExtractFiles": "Nepodařilo se extrahovat soubory ze ZIP: {e}",
@@ -92,6 +98,7 @@
   "firstInstall": "První instalace",
   "flutterAnalysis": "Analýza znečišťujících látek",
   "flutterAnalysisDesc": "Analyzovat liby pro znečišťovatel",
+  "format": "Format",
   "generate": "Generovat",
   "generating": "Generování",
   "guestNotAllowed": "Tato funkce nemůže použít hosté",
@@ -148,6 +155,7 @@
   },
   "openOllamaLibrary": "Otevřít knihovnu Ollama",
   "overwrite": "Přepsat",
+  "owner": "Owner",
   "packageName": "Název balíčku",
   "passLen": "Heslo musí mít alespoň 8 znaků",
   "passMisMatch": "Hesla se neshodují",
@@ -159,6 +167,7 @@
   "pressBackAgainToExit": "Stiskněte znovu pro ukončení",
   "proceed": "Pokračovat",
   "profile": "Profil",
+  "rawData": "Raw data",
   "register": "Registrovat se",
   "repair": "Opravit",
   "repairDexError": "Chyba při opravě DEX souboru: {e}",
@@ -180,6 +189,7 @@
   "repairing": "Oprava...",
   "reset": "Reset",
   "save": "Uložit",
+  "scheme": "Scheme",
   "searchApps": "Hledat aplikace...",
   "selectAModel": "Vyberte model pro chatování",
   "selectFiles": "Vybrat soubor {type}",
@@ -202,7 +212,10 @@
   },
   "setJarPath": "Nastavit cestu k apkeditoru",
   "setSystemMessage": "Nastavit systémovou zprávu",
+  "signature": "Signature",
+  "signInfo": "Signature Information",
   "smaliGrammar": "Smali Grammar",
+  "status": "Status",
   "suggestLogin": "Máte účet? Přihlašte se",
   "suggestRegister": "Potřebujete účet? Registrovat",
   "systemMessage": "Systémová zpráva",
@@ -223,11 +236,13 @@
   "updateAvailable": "Dostupná aktualizace",
   "updateAvailableMessage": "Je dostupná nová verze aplikace. Chcete ji nyní aktualizovat?",
   "uploading": "Nahrávám...",
+  "upperCase": "Upper case",
   "username": "Uživatelské jméno",
   "usernameCond": "Uživatelské jméno může obsahovat pouze písmena, čísla a podtržítko",
   "usernameLimit": "Uživatelské jméno musí být v rozmezí 5 až 15 znaků",
   "validateModules": "Ověřit verzi base.apk pomocí rozdělených APK",
   "versionCode": "Kód verze",
+  "viewData": "View Data",
   "vrd": "Ověřit název dir zdrojů",
   "welcomeBack": "Vítejte zpátky!"
 }
