--- a/lib/l10n/app_da.arb
+++ b/lib/l10n/app_da.arb
@@ -1,6 +1,8 @@
 {
   "about": "Om",
+  "addColon": "Add colon",
   "aiChat": "AI Chat",
+  "algorithm": "Algorithm",
   "analyze": "Analysér",
   "analyzing": "Analyserer...",
   "apiKey": "API Nøgle",
@@ -47,7 +49,10 @@
   "confirmPassword": "Bekræft Adgangskode",
   "continueAsGuest": "Fortsæt som gæst",
   "copiedToClipboard": "Kopieret til udklipsholder",
+  "copy": "Copy",
+  "copyBase64": "Copy Base64",
   "createAccount": "Opret Konto",
+  "createDate": "Created",
   "dataDirectory": "Data mappe",
   "dataDirectory2": "Datamappe 2",
   "details": "Detaljer",
@@ -66,6 +71,7 @@
   "enterUsername": "Indtast venligst brugernavn",
   "errorDuringAnalysis": "Der opstod en fejl under analyse",
   "excludeSystemApps": "Udeluk Systemapps",
+  "expireDate": "Expired",
   "extractApk": "Udpak APK",
   "extractingApk": "Udpakker APK",
   "failedToExtractFiles": "Kunne ikke udpakke filer fra ZIP: {e}",
@@ -92,6 +98,7 @@
   "firstInstall": "Første installation",
   "flutterAnalysis": "Analyse Af Flutter",
   "flutterAnalysisDesc": "Analyser Flutter libs",
+  "format": "Format",
   "generate": "Generer",
   "generating": "Genererer...",
   "guestNotAllowed": "Gæstebrugere kan ikke bruge denne funktion",
@@ -148,6 +155,7 @@
   },
   "openOllamaLibrary": "Åbn Ollama Bibliotek",
   "overwrite": "Overskriv",
+  "owner": "Owner",
   "packageName": "Pakke navn",
   "passLen": "Adgangskoden skal være på mindst 8 tegn",
   "passMisMatch": "Adgangskoder stemmer ikke overens",
@@ -159,6 +167,7 @@
   "pressBackAgainToExit": "Tryk tilbage igen for at afslutte",
   "proceed": "Fortsæt",
   "profile": "Profil",
+  "rawData": "Raw data",
   "register": "Registrer",
   "repair": "Reparer",
   "repairDexError": "Fejl ved reparation af DEX-fil: {e}",
@@ -180,6 +189,7 @@
   "repairing": "Reparerer...",
   "reset": "Reset",
   "save": "Gem",
+  "scheme": "Scheme",
   "searchApps": "Søg i apps...",
   "selectAModel": "Vælg en model at chatte",
   "selectFiles": "Vælg {type} Fil",
@@ -202,7 +212,10 @@
   },
   "setJarPath": "Sæt apkeditor krukke sti",
   "setSystemMessage": "Indstil Systembesked",
+  "signature": "Signature",
+  "signInfo": "Signature Information",
   "smaliGrammar": "Smali Grammatik",
+  "status": "Status",
   "suggestLogin": "Har du en konto? Log ind",
   "suggestRegister": "Har du brug for en konto?",
   "systemMessage": "System Besked",
@@ -223,11 +236,13 @@
   "updateAvailable": "Opdatering Tilgængelig",
   "updateAvailableMessage": "En ny version af appen er tilgængelig. Vil du opdatere nu?",
   "uploading": "Uploader...",
+  "upperCase": "Upper case",
   "username": "Brugernavn",
   "usernameCond": "Brugernavn kan kun indeholde bogstaver, tal og understregning",
   "usernameLimit": "Brugernavn skal være mellem 5 og 15 tegn",
   "validateModules": "Validér version af base.apk med delte APK'er",
   "versionCode": "Versionskode",
+  "viewData": "View Data",
   "vrd": "Validér ressourcens dir navn",
   "welcomeBack": "Velkommen Tilbage!"
 }
