--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -1,6 +1,8 @@
 {
   "about": "Über",
+  "addColon": "Add colon",
   "aiChat": "KI-Chat",
+  "algorithm": "Algorithm",
   "analyze": "Analysieren",
   "analyzing": "Analyse...",
   "apiKey": "API-Schlüssel",
@@ -47,7 +49,10 @@
   "confirmPassword": "Passwort bestätigen",
   "continueAsGuest": "Als Gast fortfahren",
   "copiedToClipboard": "In Zwischenablage kopiert",
+  "copy": "Copy",
+  "copyBase64": "Copy Base64",
   "createAccount": "Konto erstellen",
+  "createDate": "Created",
   "dataDirectory": "Datenverzeichnis",
   "dataDirectory2": "Datenverzeichnis 2",
   "details": "Details",
@@ -66,6 +71,7 @@
   "enterUsername": "Bitte Benutzername eingeben",
   "errorDuringAnalysis": "Während der Analyse ist ein Fehler aufgetreten",
   "excludeSystemApps": "System-Apps ausschließen",
+  "expireDate": "Expired",
   "extractApk": "APK entpacken",
   "extractingApk": "APK wird extrahiert",
   "failedToExtractFiles": "Fehler beim Entpacken von Dateien aus ZIP: {e}",
@@ -92,6 +98,7 @@
   "firstInstall": "Erste Installation",
   "flutterAnalysis": "Flutter-Analyse",
   "flutterAnalysisDesc": "Flutter-Bibliotheken analysieren",
+  "format": "Format",
   "generate": "Generieren",
   "generating": "Erstellen...",
   "guestNotAllowed": "Gastbenutzer können diese Funktion nicht verwenden",
@@ -148,6 +155,7 @@
   },
   "openOllamaLibrary": "Ollama Bibliothek öffnen",
   "overwrite": "Überschreiben",
+  "owner": "Owner",
   "packageName": "Paketname",
   "passLen": "Passwort muss mindestens 8 Zeichen lang sein",
   "passMisMatch": "Passwörter stimmen nicht überein",
@@ -159,6 +167,7 @@
   "pressBackAgainToExit": "Zum Beenden erneut drücken",
   "proceed": "Fortfahren",
   "profile": "Profil",
+  "rawData": "Raw data",
   "register": "Registrieren",
   "repair": "Reparieren",
   "repairDexError": "Fehler beim Reparieren der DEX-Datei: {e}",
@@ -180,6 +189,7 @@
   "repairing": "Repariere...",
   "reset": "Reset",
   "save": "Speichern",
+  "scheme": "Scheme",
   "searchApps": "Apps suchen...",
   "selectAModel": "Wählen Sie ein Modell zum chatten",
   "selectFiles": "Wähle {type} Datei",
@@ -202,7 +212,10 @@
   },
   "setJarPath": "Apkeditor jar Pfad festlegen",
   "setSystemMessage": "Systemnachricht festlegen",
+  "signature": "Signature",
+  "signInfo": "Signature Information",
   "smaliGrammar": "Smali Grammatik",
+  "status": "Status",
   "suggestLogin": "Haben Sie ein Konto? Anmelden",
   "suggestRegister": "Brauchen Sie ein Konto? Registrieren",
   "systemMessage": "Systemnachricht",
@@ -223,11 +236,13 @@
   "updateAvailable": "Update verfügbar",
   "updateAvailableMessage": "Eine neue Version der App ist verfügbar. Möchten Sie jetzt aktualisieren?",
   "uploading": "Hochladen...",
+  "upperCase": "Upper case",
   "username": "Benutzername",
   "usernameCond": "Benutzername darf nur Buchstaben, Zahlen und Unterstriche enthalten",
   "usernameLimit": "Benutzername muss zwischen 5 und 15 Zeichen lang sein",
   "validateModules": "Version von base.apk mit geteilten APKs überprüfen",
   "versionCode": "Versionscode",
+  "viewData": "View Data",
   "vrd": "Überprüfe Ressourcen-Verzeichnisname",
   "welcomeBack": "Willkommen zurück!"
 }
