--- a/lib/l10n/app_fi.arb
+++ b/lib/l10n/app_fi.arb
@@ -1,6 +1,8 @@
 {
   "about": "Tietoja",
+  "addColon": "Add colon",
   "aiChat": "Ai Keskustelu",
+  "algorithm": "Algorithm",
   "analyze": "Analysoi",
   "analyzing": "Tarkastellaan...",
   "apiKey": "Api Avain",
@@ -47,7 +49,10 @@
   "confirmPassword": "Vahvista Salasana",
   "continueAsGuest": "Jatka vieraana",
   "copiedToClipboard": "Kopioitu leikepöydälle",
+  "copy": "Copy",
+  "copyBase64": "Copy Base64",
   "createAccount": "Luo Tili",
+  "createDate": "Created",
   "dataDirectory": "Datakansio",
   "dataDirectory2": "Datakansio 2",
   "details": "Yksityiskohdat",
@@ -66,6 +71,7 @@
   "enterUsername": "Syötä käyttäjänimi",
   "errorDuringAnalysis": "Analyysin aikana tapahtui virhe",
   "excludeSystemApps": "Ohita Järjestelmäsovellukset",
+  "expireDate": "Expired",
   "extractApk": "Pura APK",
   "extractingApk": "Puretaan APK",
   "failedToExtractFiles": "Ei voitu poimia tiedostoja ZIP: {e}",
@@ -92,6 +98,7 @@
   "firstInstall": "Asenna ensin",
   "flutterAnalysis": "Flutterin Analyysi",
   "flutterAnalysisDesc": "Analysoi Flutter libs",
+  "format": "Format",
   "generate": "Luo",
   "generating": "Luodaan...",
   "guestNotAllowed": "Vieraat käyttäjät eivät voi käyttää tätä ominaisuutta",
@@ -148,6 +155,7 @@
   },
   "openOllamaLibrary": "Avaa Ollaman Kirjasto",
   "overwrite": "Korvaa",
+  "owner": "Owner",
   "packageName": "Paketin nimi",
   "passLen": "Salasanan tulee olla vähintään 8 merkkiä pitkä",
   "passMisMatch": "Salasanat eivät täsmää",
@@ -159,6 +167,7 @@
   "pressBackAgainToExit": "Paina takaisin uudelleen poistuaksesi",
   "proceed": "Jatka",
   "profile": "Profiili",
+  "rawData": "Raw data",
   "register": "Rekisteröidy",
   "repair": "Korjaa",
   "repairDexError": "Virhe korjattaessa DEX-tiedostoa: {e}",
@@ -180,6 +189,7 @@
   "repairing": "Korjataan...",
   "reset": "Reset",
   "save": "Tallenna",
+  "scheme": "Scheme",
   "searchApps": "Hae sovelluksia...",
   "selectAModel": "Valitse malli keskustellaksesi",
   "selectFiles": "Valitse {type} Tiedosto",
@@ -202,7 +212,10 @@
   },
   "setJarPath": "Aseta apkeditor jar polku",
   "setSystemMessage": "Aseta Järjestelmäviesti",
+  "signature": "Signature",
+  "signInfo": "Signature Information",
   "smaliGrammar": "Smali Kielioppi",
+  "status": "Status",
   "suggestLogin": "Onko sinulla tili? Kirjaudu",
   "suggestRegister": "Tarvitsetko tilin? Rekisteröidy",
   "systemMessage": "Järjestelmän Viesti",
@@ -223,11 +236,13 @@
   "updateAvailable": "Päivitys Saatavilla",
   "updateAvailableMessage": "Sovelluksen uusi versio on saatavilla. Haluatko päivittää nyt?",
   "uploading": "Lähetetään...",
+  "upperCase": "Upper case",
   "username": "Käyttäjätunnus",
   "usernameCond": "Käyttäjätunnus voi sisältää vain kirjaimia, numeroita ja alaviivoja",
   "usernameLimit": "Käyttäjänimen tulee olla 5-15 merkkiä pitkä.",
   "validateModules": "Vahvista versio base.apk split APKs",
   "versionCode": "Version koodi",
+  "viewData": "View Data",
   "vrd": "Vahvista resurssien dir nimi",
   "welcomeBack": "Tervetuloa Takaisin!"
 }
