--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -1,6 +1,8 @@
 {
   "about": "О программе",
+  "addColon": "Add colon",
   "aiChat": "AI Чат",
+  "algorithm": "Algorithm",
   "analyze": "Анализ",
   "analyzing": "Анализ...",
   "apiKey": "Ключ API",
@@ -47,7 +49,10 @@
   "confirmPassword": "Подтверждение пароля",
   "continueAsGuest": "Продолжить как гость",
   "copiedToClipboard": "Скопировано в буфер обмена",
+  "copy": "Copy",
+  "copyBase64": "Copy Base64",
   "createAccount": "Создать Аккаунт",
+  "createDate": "Created",
   "dataDirectory": "Каталог данных",
   "dataDirectory2": "Каталог данных 2",
   "details": "Детали",
@@ -66,6 +71,7 @@
   "enterUsername": "Пожалуйста, введите имя пользователя",
   "errorDuringAnalysis": "Произошла ошибка во время анализа",
   "excludeSystemApps": "Исключить системные приложения",
+  "expireDate": "Expired",
   "extractApk": "Извлечь APK",
   "extractingApk": "Извлечение APK",
   "failedToExtractFiles": "Не удалось извлечь файлы из ZIP: {e}",
@@ -92,6 +98,7 @@
   "firstInstall": "Первая установка",
   "flutterAnalysis": "Анализ Flutter",
   "flutterAnalysisDesc": "Анализ библиотек Flutter",
+  "format": "Format",
   "generate": "Сгенерировать",
   "generating": "Создание...",
   "guestNotAllowed": "Гостевые пользователи не могут использовать эту функцию",
@@ -148,6 +155,7 @@
   },
   "openOllamaLibrary": "Открыть библиотеку Ollama",
   "overwrite": "Перезаписать",
+  "owner": "Owner",
   "packageName": "Имя пакета",
   "passLen": "Пароль должен содержать не менее 8 символов",
   "passMisMatch": "Пароли не совпадают",
@@ -159,6 +167,7 @@
   "pressBackAgainToExit": "Нажмите Назад еще раз для выхода",
   "proceed": "Продолжить",
   "profile": "Профиль",
+  "rawData": "Raw data",
   "register": "Регистрация",
   "repair": "Ремонт",
   "repairDexError": "Ошибка восстановления файла DEX: {e}",
@@ -180,6 +189,7 @@
   "repairing": "Починка...",
   "reset": "Reset",
   "save": "Сохранить",
+  "scheme": "Scheme",
   "searchApps": "Поиск приложений...",
   "selectAModel": "Выберите модель для чата",
   "selectFiles": "Выберите файл {type}",
@@ -202,7 +212,10 @@
   },
   "setJarPath": "Установить путь к jar apkeditor",
   "setSystemMessage": "Задать системное сообщение",
+  "signature": "Signature",
+  "signInfo": "Signature Information",
   "smaliGrammar": "Smali Grammar",
+  "status": "Status",
   "suggestLogin": "Уже есть аккаунт? Войдите",
   "suggestRegister": "Нужен аккаунт? Зарегистрироваться",
   "systemMessage": "Системное сообщение",
@@ -223,11 +236,13 @@
   "updateAvailable": "Доступно обновление",
   "updateAvailableMessage": "Доступна новая версия приложения. Хотите обновить сейчас?",
   "uploading": "Загрузка...",
+  "upperCase": "Upper case",
   "username": "Имя пользователя",
   "usernameCond": "Имя пользователя может содержать только буквы, цифры и подчеркивание",
   "usernameLimit": "Имя пользователя должно быть от 5 до 15 символов",
   "validateModules": "Проверить версию base.apk с помощью разделенного APK",
   "versionCode": "Код версии",
+  "viewData": "View Data",
   "vrd": "Проверить имя каталога ресурсов",
   "welcomeBack": "С возвращением!"
 }
