--- a/lib/l10n/app_sr.arb
+++ b/lib/l10n/app_sr.arb
@@ -1,6 +1,8 @@
 {
   "about": "About",
+  "addColon": "Add colon",
   "aiChat": "AI Chat",
+  "algorithm": "Algorithm",
   "analyze": "Analyze",
   "analyzing": "Analyzing...",
   "apiKey": "API Key",
@@ -47,7 +49,10 @@
   "confirmPassword": "Confirm Password",
   "continueAsGuest": "Continue as Guest",
   "copiedToClipboard": "Copied to clipboard",
+  "copy": "Copy",
+  "copyBase64": "Copy Base64",
   "createAccount": "Create Account",
+  "createDate": "Created",
   "dataDirectory": "Data directory",
   "dataDirectory2": "Data directory 2",
   "details": "Details",
@@ -66,6 +71,7 @@
   "enterUsername": "Please enter username",
   "errorDuringAnalysis": "An error occurred during analysis",
   "excludeSystemApps": "Exclude System Apps",
+  "expireDate": "Expired",
   "extractApk": "Extract APK",
   "extractingApk": "Extracting APK",
   "failedToExtractFiles": "Failed to extract files from ZIP: {e}",
@@ -92,6 +98,7 @@
   "firstInstall": "First install",
   "flutterAnalysis": "Flutter Analysis",
   "flutterAnalysisDesc": "Analyze Flutter libs",
+  "format": "Format",
   "generate": "Generate",
   "generating": "Generating...",
   "guestNotAllowed": "Guest users cannot use this feature",
@@ -148,6 +155,7 @@
   },
   "openOllamaLibrary": "Open Ollama Library",
   "overwrite": "Overwrite",
+  "owner": "Owner",
   "packageName": "Package name",
   "passLen": "Password must be at least 8 characters",
   "passMisMatch": "Passwords do not match",
@@ -159,6 +167,7 @@
   "pressBackAgainToExit": "Press back again to exit",
   "proceed": "Proceed",
   "profile": "Profile",
+  "rawData": "Raw data",
   "register": "Register",
   "repair": "Repair",
   "repairDexError": "Error repairing DEX file: {e}",
@@ -180,6 +189,7 @@
   "repairing": "Repairing...",
   "reset": "Reset",
   "save": "Save",
+  "scheme": "Scheme",
   "searchApps": "Search apps...",
   "selectAModel": "Select a model to chat",
   "selectFiles": "Select {type} File",
@@ -202,7 +212,10 @@
   },
   "setJarPath": "Set apkeditor jar path",
   "setSystemMessage": "Set System Message",
+  "signature": "Signature",
+  "signInfo": "Signature Information",
   "smaliGrammar": "Smali Grammar",
+  "status": "Status",
   "suggestLogin": "Have an account? Login",
   "suggestRegister": "Need an account? Register",
   "systemMessage": "System Message",
@@ -223,11 +236,13 @@
   "updateAvailable": "Update Available",
   "updateAvailableMessage": "A new version of the app is available. Would you like to update now?",
   "uploading": "Uploading...",
+  "upperCase": "Upper case",
   "username": "Username",
   "usernameCond": "Username can only contain letters, numbers, and underscore",
   "usernameLimit": "Username must be between 5 and 15 characters",
   "validateModules": "Validate version of base.apk with split APKs",
   "versionCode": "Version code",
+  "viewData": "View Data",
   "vrd": "Validate resources dir name",
   "welcomeBack": "Welcome Back!"
 }
